<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_ncalculo"
        android:layout_width="75dp"
        android:layout_height="41dp"
        android:layout_marginTop="90dp"
        android:text="Limpiar"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="70dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="223dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="292dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_potencia"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="POTENCIA" />

        <Button
            android:id="@+id/btn_fibonnaci"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="FIBONACCI" />

        <Button
            android:id="@+id/btn_multi"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="MULTIPLICACION" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="214dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="RESULTADO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

    </FrameLayout>

    <TableRow
        android:layout_width="409dp"
        android:layout_height="290dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>